# llm3dprint

./: .gitignore  README.md  SLIDE.md  SLIDE.pptx  hello.py  main.py  openscad_model.stl  pyproject.toml  shape_e_ouput.stl  stl_model_output.stl  temp_llama_index.scad  temp_llama_index.stl  temp_openscad.scad  temp_openscad.stl  temp_scad_file.scad
llm3dprint/: app_setting.py  chat_history.py  llama_index_thread.py  llm_thread.py  llm_utils.py  main.py  main_window.py  openscad_utils.py  print_utils.py  setting_dialog.py  stl_viewer.py
