[tool.poetry]
name = "llm3dprint"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pyside6 = "^6.8.0.1"
pyvista = "^0.44.1"
pyvistaqt = "^0.11.1"
httpx = "^0.27.2"
trimesh = "^4.5.0"
llama-index = "^0.11.20"
llama-index-llms-openrouter = "^0.2.1"
llama-index-llms-ollama = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
