[project]
name = "llm3dprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<=3.13"
dependencies = [
    "httpx>=0.27.2",
    "llama-index>=0.11.21",
    "pyside6>=6.8.0.2",
    "pyvista>=0.44.1",
    "pyvistaqt>=0.11.1",
    "trimesh>=4.5.1",
]
